Bug 299615 - Incorrect use of "shared axis box" causes Kst to crash
Summary: Incorrect use of "shared axis box" causes Kst to crash
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: ui (other bugs)
Version First Reported In: 2.0.4
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-08 10:32 UTC by Ben Lewis
Modified: 2012-05-15 17:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace qith Qt 4.7.4 (5.38 KB, text/plain)
2012-05-08 18:46 UTC, Peter Kümmel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Lewis 2012-05-08 10:32:08 UTC
If the "shared axis box" icon is used on a plot that is already shared Kst will crash.

Reproducible: Always

Steps to Reproduce:
Start a new Kst session
Create two empty plots
Link the two plots by clicking on the “shared axis box” icon and sweeping the mouse over the two plots
Click on the “shared axis box” icon again
Click on one of the two shared axis plots. Kst will crash.

Actual Results:  
Kst crashes

Expected Results:  
Nothing should happen... or maybe the linked plots should be decoupled.
Comment 1 Peter Kümmel 2012-05-08 18:45:49 UTC
Kst runs into a endless loop within Qt, see back trace.
Comment 2 Peter Kümmel 2012-05-08 18:46:35 UTC
Created attachment 70964 [details]
Backtrace qith Qt 4.7.4
Comment 3 Peter Kümmel 2012-05-08 19:03:19 UTC
Same with 2.0.5-rc4 on Windows.
A single click into the already shared plots is enough to make Kst hang and eating one cpu core.
Comment 4 Netterfield 2012-05-15 17:32:56 UTC
SVN commit 1294981 by netterfield:


-Don't crash when including a shared axis box in a shared axis box.
-Abort the command when including a sharedd axis box in a shared axis box.



 M  +1 -1      datasources/ascii/asciisource.cpp  
 M  +5 -4      libkstapp/sharedaxisboxitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1294981