BUG: 299615

-Don't crash when including a shared axis box in a shared axis box.
-Abort the command when including a sharedd axis box in a shared axis box.



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1294981 283d02a7-25f6-0310-bc7c-ecb5cbfe19da